Implementation de visitComparison, visitAnd, visitOr, visitOpposite, visitBase_type, visitInteger, visitBoolean methods dans CodeGenerator